
AUX_SOURCE_DIRECTORY(. NET_SRC)
AUX_SOURCE_DIRECTORY(./lzf NET_SRC)
LIST(FILTER NET_SRC EXCLUDE REGEX ".*_test.cc")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_LIBRARY(libnet ${NET_SRC})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/std)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/net)

TARGET_LINK_LIBRARIES(libnet; libstd event_extra event_core llhttp::llhttp)

SET_TARGET_PROPERTIES(libnet PROPERTIES LINKER_LANGUAGE CXX)
